# frame-representation

./: .gitignore  Dockerfile.vllm  README.md  compare.py  evaluate.py  main.py  models.py  personas.py  plot_summary.py  prompts.py  pyproject.toml  serve_llama.sh
results/20260615_044149_three_personas_comparison_thinking/: results_20260615_044149.json
results/20260615_063826_literary_explicit_thinking/: results.json
results/20260615_172020/: claude-sonnet-4-5__literature_phd_explicit.jsonl  results.json
results/20260615_172513_cot_no_thinking/: claude-sonnet-4-5__baseline.jsonl  results.json
results/20260615_230750_cot_literature_extreme/: results.json
results/20260615_231953_prefill_test/: claude-sonnet-4-5__baseline.jsonl  results.json
results/20260615_233054_answer_only/: claude-sonnet-4-5__baseline.jsonl  claude-sonnet-4-5__high_schooler.jsonl  claude-sonnet-4-5__literature_phd_extreme.jsonl  results.json
results/20260616_002500_thinking_literature_extreme/: claude-sonnet-4-5__literature_phd_extreme.jsonl
results/20260616_014337_cot_maths_undergrad/: results.json
results/20260616_020359_cot_literature/: claude-sonnet-4-5__literature_phd.jsonl  results.json
results/claude-sonnet-4-5/answer_only/20260615_233054_answer_only/: claude-sonnet-4-5__literature_phd.jsonl  claude-sonnet-4-5__literature_phd_explicit.jsonl  claude-sonnet-4-5__maths_undergraduate.jsonl
results/claude-sonnet-4-5/cot_thinking_off/20260615_172513_cot_no_thinking/: claude-sonnet-4-5__high_schooler.jsonl  claude-sonnet-4-5__literature_phd_explicit.jsonl
(+6 files in other folders)
