[project]
name = "frame-representation"
version = "0.1.0"
description = "MMLU abstract algebra evaluation pipeline with persona prompting"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "datasets>=3.0.0",
    "matplotlib>=3.9.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    # Uncomment when running open-weights models via vLLM on the cluster:
    # "openai>=1.50.0",
]
